[tool.poetry]
name = "search_keywords"
version = "0.1.0"
description = "A tool support get track id from search keywords"
authors = ["Tuan Nguyen Vinh <tuannv562@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
